--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 # Required metadata
-sonar.projectKey=sonar:demo:java:runner
+sonar.projectKey=sonar:demo:git:java:runner
 #sonar.projectKey=sonar:demo:css:runner
 #sonar.projectKey=sonar:demo:js:runner
 #sonar.projectKey=sonar:demo:web:runner
 
-sonar.projectName=Sonar demo - Java Runner
+sonar.projectName=Sonar demo git - Java Runner
 #sonar.projectName=Sonar demo - CSS Runner
 #sonar.projectName=Sonar demo - JS Runner
 #sonar.projectName=Sonar demo - Web Runner
